--- a/interactive_generator.ipynb
+++ b/interactive_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "from generator import botr_generator\n",
     "import matplotlib.pyplot as plt\n",
     "from utils import load_coco_categories, save_json\n",
-    "import os"
+    "from metaplex import format_attributes\n",
+    "import os\n",
+    "import json"
    ]
   },
   {
@@ -25,7 +27,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.42s)\n",
+      "Done (t=0.45s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -76,16 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83 \n",
-      "\n",
-      "83 \n",
+      "69 \n",
       "\n",
       "83 \n",
       "\n",
@@ -101,32 +101,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "# easy quick way to save a batch that you like \n",
-    "def save_image_batch(image_batch, categories, root='generated/'):\n",
+    "def save_image_batch(image_batch, categories, path='generated/'):\n",
     "    index = 0\n",
-    "\n",
+    "    data_base_path = os.path.join(path, \"raw\")\n",
+    "    if not os.path.exists(data_base_path):\n",
+    "        os.mkdir(data_base_path)\n",
     "    for img, cat in zip(image_batch, categories):\n",
-    "        img_path = os.path.join(root, f\"img_{index}.png\")\n",
-    "        data_path = os.path.join(root, f\"attr_{index}.json\")\n",
-    "\n",
+    "        img_path = os.path.join(path, f\"img_{index}.png\")\n",
+    "        data_path = os.path.join(data_base_path, f\"attr_{index}.json\")\n",
     "        if os.path.isfile(img_path) or os.path.isfile(data_path):\n",
     "            while os.path.isfile(img_path) and os.path.isfile(data_path):\n",
     "                index += 1\n",
-    "                img_path = os.path.join(root, f\"img_{index}.png\")\n",
-    "                data_path = os.path.join(root, f\"attr_{index}.json\")\n",
-    "\n",
-    "        save_json(data_path, cat)\n",
+    "                img_path = os.path.join(path, f\"img_{index}.png\")\n",
+    "                data_path = os.path.join(data_base_path, f\"attr_{index}.json\")\n",
+    "        # save_json(data_path, cat)\n",
+    "        with open(data_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(cat, f, ensure_ascii=False, indent=3)\n",
     "        save_image(img, img_path)\n",
     "        print(f'\\n saved img: {img_path} \\n saved data {data_path}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -151,22 +154,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " saved img: generated/img_4.png \n",
-      " saved data generated/attr_4.json\n",
-      "\n",
-      " saved img: generated/img_5.png \n",
-      " saved data generated/attr_5.json\n",
-      "\n",
-      " saved img: generated/img_6.png \n",
-      " saved data generated/attr_6.json\n",
+      " saved img: generated/img_0.png \n",
+      " saved data generated/raw/attr_0.json\n",
       "\n",
       " saved img: generated/img_7.png \n",
-      " saved data generated/attr_7.json\n"
+      " saved data generated/raw/attr_7.json\n",
+      "\n",
+      " saved img: generated/img_8.png \n",
+      " saved data generated/raw/attr_8.json\n",
+      "\n",
+      " saved img: generated/img_9.png \n",
+      " saved data generated/raw/attr_9.json\n"
      ]
     }
    ],
    "source": [
-    "save_image_batch(image_batch, categories, root='generated/')\n",
+    "save_image_batch(image_batch, categories, path='generated/')\n",
     "\n",
     "# 'generated/img1.png'\n",
     "\n",
@@ -174,6 +177,28 @@
     "#     plt.imshow(img.permute(1,2,0))\n",
     "#     plt.show()\n",
     "#     index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"adsa\": \"sdada\", \"sadhg\": \"sfkjsjf\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = { \n",
+    "    \"adsa\": \"sdada\",\n",
+    "    \"sadhg\" : \"sfkjsjf\"\n",
+    "}\n",
+    "\n",
+    "print(json.dumps(test))"
    ]
   },
   {
@@ -269,52 +294,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "json_file = \"annotations/instances_val2017.json\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 67, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 86, 87, 88, 89, 90])\n"
-     ]
-    }
-   ],
-   "source": [
-    "from utils import load_coco_categories\n",
-    "\n",
-    "categories = load_coco_categories()\n",
-    "\n",
-    "print(categories.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
