adding metaplex export

--- a/interactive_generator.ipynb
+++ b/interactive_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.45s)\n",
+      "Done (t=0.64s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -45,9 +45,9 @@
     "    coco_dset,\n",
     "    coco_categories,\n",
     "    dims=(1024,1024),\n",
-    "    batch_size=4,\n",
+    "    batch_size=16,\n",
     "    fill_target=0.99,\n",
-    "    max_step_fill=0.1,\n",
+    "    max_step_fill=0.08,\n",
     "    step_fill_jitter=0.5,\n",
     "    for_nn=True)"
    ]
@@ -78,18 +78,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "83 \n",
+      "\n",
       "69 \n",
       "\n",
       "83 \n",
       "\n",
-      "torch.Size([4, 3, 1024, 1024])\n"
+      "83 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "-1 \n",
+      "\n",
+      "45 \n",
+      "\n",
+      "45 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "69 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "-4 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "83 \n",
+      "\n",
+      "torch.Size([16, 3, 1024, 1024])\n"
      ]
     }
    ],
@@ -101,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +145,14 @@
     "    if not os.path.exists(data_base_path):\n",
     "        os.mkdir(data_base_path)\n",
     "    for img, cat in zip(image_batch, categories):\n",
-    "        img_path = os.path.join(path, f\"img_{index}.png\")\n",
-    "        data_path = os.path.join(data_base_path, f\"attr_{index}.json\")\n",
+    "        img_path = os.path.join(path, f\"{index}.png\")\n",
+    "        data_path = os.path.join(data_base_path, f\"{index}.json\")\n",
+    "\n",
     "        if os.path.isfile(img_path) or os.path.isfile(data_path):\n",
     "            while os.path.isfile(img_path) and os.path.isfile(data_path):\n",
     "                index += 1\n",
-    "                img_path = os.path.join(path, f\"img_{index}.png\")\n",
-    "                data_path = os.path.join(data_base_path, f\"attr_{index}.json\")\n",
+    "                img_path = os.path.join(path, f\"{index}.png\")\n",
+    "                data_path = os.path.join(data_base_path, f\"{index}.json\")\n",
     "        # save_json(data_path, cat)\n",
     "        with open(data_path, 'w', encoding='utf-8') as f:\n",
     "            json.dump(cat, f, ensure_ascii=False, indent=3)\n",
@@ -129,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 3, 1024, 1024]) 4\n"
+      "torch.Size([16, 3, 1024, 1024]) 16\n"
      ]
     }
    ],
@@ -146,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,29 +187,58 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " saved img: generated/img_0.png \n",
-      " saved data generated/raw/attr_0.json\n",
+      " saved img: generated/0.png \n",
+      " saved data generated/raw/0.json\n",
       "\n",
-      " saved img: generated/img_7.png \n",
-      " saved data generated/raw/attr_7.json\n",
+      " saved img: generated/1.png \n",
+      " saved data generated/raw/1.json\n",
       "\n",
-      " saved img: generated/img_8.png \n",
-      " saved data generated/raw/attr_8.json\n",
+      " saved img: generated/2.png \n",
+      " saved data generated/raw/2.json\n",
       "\n",
-      " saved img: generated/img_9.png \n",
-      " saved data generated/raw/attr_9.json\n"
+      " saved img: generated/3.png \n",
+      " saved data generated/raw/3.json\n",
+      "\n",
+      " saved img: generated/4.png \n",
+      " saved data generated/raw/4.json\n",
+      "\n",
+      " saved img: generated/5.png \n",
+      " saved data generated/raw/5.json\n",
+      "\n",
+      " saved img: generated/6.png \n",
+      " saved data generated/raw/6.json\n",
+      "\n",
+      " saved img: generated/7.png \n",
+      " saved data generated/raw/7.json\n",
+      "\n",
+      " saved img: generated/8.png \n",
+      " saved data generated/raw/8.json\n",
+      "\n",
+      " saved img: generated/9.png \n",
+      " saved data generated/raw/9.json\n",
+      "\n",
+      " saved img: generated/10.png \n",
+      " saved data generated/raw/10.json\n",
+      "\n",
+      " saved img: generated/11.png \n",
+      " saved data generated/raw/11.json\n",
+      "\n",
+      " saved img: generated/12.png \n",
+      " saved data generated/raw/12.json\n",
+      "\n",
+      " saved img: generated/13.png \n",
+      " saved data generated/raw/13.json\n",
+      "\n",
+      " saved img: generated/14.png \n",
+      " saved data generated/raw/14.json\n",
+      "\n",
+      " saved img: generated/15.png \n",
+      " saved data generated/raw/15.json\n"
      ]
     }
    ],
    "source": [
-    "save_image_batch(image_batch, categories, path='generated/')\n",
-    "\n",
-    "# 'generated/img1.png'\n",
-    "\n",
-    "#     # save_image(img.permute(2, 0, 1), )\n",
-    "#     plt.imshow(img.permute(1,2,0))\n",
-    "#     plt.show()\n",
-    "#     index += 1"
+    "save_image_batch(image_batch, categories, path='generated/')"
    ]
   },
   {
