--- a/process_metaplex.ipynb
+++ b/process_metaplex.ipynb
@@ -16,7 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r assets/*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,23 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "copied generated/img_0.png to assets/img_0.png\n",
-      "copied generated/img_1.png to assets/img_1.png\n",
-      "copied generated/img_2.png to assets/img_2.png\n",
-      "copied generated/img_3.png to assets/img_3.png\n",
-      "copied generated/img_4.png to assets/img_4.png\n",
-      "copied generated/img_5.png to assets/img_5.png\n",
-      "copied generated/img_6.png to assets/img_6.png\n",
-      "copied generated/img_7.png to assets/img_7.png\n",
-      "copied generated/img_8.png to assets/img_8.png\n",
-      "copied generated/img_9.png to assets/img_9.png\n"
+      "copied generated/0.png to assets/0.png\n",
+      "copied generated/1.png to assets/1.png\n",
+      "copied generated/2.png to assets/2.png\n",
+      "copied generated/3.png to assets/3.png\n",
+      "copied generated/4.png to assets/4.png\n",
+      "copied generated/5.png to assets/5.png\n",
+      "copied generated/6.png to assets/6.png\n",
+      "copied generated/7.png to assets/7.png\n",
+      "copied generated/8.png to assets/8.png\n",
+      "copied generated/9.png to assets/9.png\n",
+      "copied generated/10.png to assets/10.png\n",
+      "copied generated/11.png to assets/11.png\n",
+      "copied generated/12.png to assets/12.png\n",
+      "copied generated/13.png to assets/13.png\n",
+      "copied generated/14.png to assets/14.png\n",
+      "copied generated/15.png to assets/15.png\n"
      ]
     }
    ],
@@ -81,12 +96,12 @@
     "        dict_attrs = json.loads(f.read())\n",
     "    attr_format = format_attributes([dict_attrs])\n",
     "    metadata = generate_metadata(\n",
-    "        name=name,\n",
+    "        name=f\"{collection_name} {name}\",\n",
     "        symbol=symbol,\n",
     "        royalties=royalties,\n",
     "        collection_name=collection_name,\n",
     "        description=description,\n",
-    "        image_path=img,\n",
+    "        image_file=os.path.split(img)[-1],\n",
     "        animation_path='',\n",
     "        external_url='homunculi.org/art',\n",
     "        attributes=attr_format,\n",
