adding pyramid bleending

--- a/botr_setup.ipynb
+++ b/botr_setup.ipynb
@@ -5077,18 +5077,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove 'val2017.zip': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "!rm val2017.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-01-02 01:07:31--  http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
+      "Resolving images.cocodataset.org (images.cocodataset.org)... 52.216.145.211\n",
+      "Connecting to images.cocodataset.org (images.cocodataset.org)|52.216.145.211|:80... connected.\n",
+      "HTTP request sent, awaiting response... 416 Requested Range Not Satisfiable\n",
+      "\n",
+      "    The file is already fully retrieved; nothing to do.\n",
+      "\n",
+      "Archive:  annotations_trainval2017.zip\n",
+      "  inflating: annotations/instances_train2017.json  \n",
+      "  inflating: annotations/instances_val2017.json  \n",
+      "  inflating: annotations/captions_train2017.json  \n",
+      "  inflating: annotations/captions_val2017.json  \n",
+      "  inflating: annotations/person_keypoints_train2017.json  \n",
+      "  inflating: annotations/person_keypoints_val2017.json  \n"
+     ]
+    }
+   ],
    "source": [
     "!wget -c http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
     "!unzip -o annotations_trainval2017.zip"
@@ -5096,7 +5125,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unzip:  cannot find or open annotations/stuff_val2017_pixelmaps.zip, annotations/stuff_val2017_pixelmaps.zip.zip or annotations/stuff_val2017_pixelmaps.zip.ZIP.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!unzip annotations/stuff_val2017_pixelmaps.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/leimao/cocoapi.git#subdirectory=PythonAPI\n",
+      "  Cloning https://github.com/leimao/cocoapi.git to /tmp/pip-req-build-amoobiep\n",
+      "  Running command git clone -q https://github.com/leimao/cocoapi.git /tmp/pip-req-build-amoobiep\n",
+      "Requirement already satisfied, skipping upgrade: cython>=0.27.3 in /home/carl/.local/lib/python3.8/site-packages (from pycocotools==2.0) (0.29.26)\n",
+      "Requirement already satisfied, skipping upgrade: matplotlib>=2.1.0 in /home/carl/.local/lib/python3.8/site-packages (from pycocotools==2.0) (3.5.0)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools>=18.0 in /usr/lib/python3/dist-packages (from pycocotools==2.0) (45.2.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyparsing>=2.2.1 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (3.0.6)\n",
+      "Requirement already satisfied, skipping upgrade: cycler>=0.10 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (0.11.0)\n",
+      "Requirement already satisfied, skipping upgrade: pillow>=6.2.0 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (8.4.0)\n",
+      "Requirement already satisfied, skipping upgrade: python-dateutil>=2.7 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (2.8.2)\n",
+      "Requirement already satisfied, skipping upgrade: packaging>=20.0 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (21.3)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools-scm>=4 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (6.3.2)\n",
+      "Requirement already satisfied, skipping upgrade: kiwisolver>=1.0.1 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (1.3.2)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.17 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (1.21.4)\n",
+      "Requirement already satisfied, skipping upgrade: fonttools>=4.22.0 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (4.28.3)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib>=2.1.0->pycocotools==2.0) (1.14.0)\n",
+      "Requirement already satisfied, skipping upgrade: tomli>=1.0.0 in /home/carl/.local/lib/python3.8/site-packages (from setuptools-scm>=4->matplotlib>=2.1.0->pycocotools==2.0) (1.2.2)\n",
+      "Building wheels for collected packages: pycocotools\n",
+      "  Building wheel for pycocotools (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pycocotools: filename=pycocotools-2.0-cp38-cp38-linux_x86_64.whl size=419087 sha256=d4cda01684e70992bee8b7cb9107d56c7bacc6f6430220c3edfa79417fddc46b\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-dbcqybup/wheels/bf/78/f1/9a856d069f2c6b383df93dcbb04cff9aca00ac2beeefbded5b\n",
+      "Successfully built pycocotools\n",
+      "Installing collected packages: pycocotools\n",
+      "Successfully installed pycocotools-2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -U 'git+https://github.com/leimao/cocoapi.git#subdirectory=PythonAPI'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -10109,7 +10195,7 @@
     }
    ],
    "source": [
-    "# !unzip annotations/stuff_val2017_pixelmaps.zip"
+    "!unzip annotations/stuff_val2017_pixelmaps.zip"
    ]
   },
   {
@@ -10121,40 +10207,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting git+https://github.com/leimao/cocoapi.git#subdirectory=PythonAPI\n",
-      "  Cloning https://github.com/leimao/cocoapi.git to /tmp/pip-req-build-amoobiep\n",
-      "  Running command git clone -q https://github.com/leimao/cocoapi.git /tmp/pip-req-build-amoobiep\n",
-      "Requirement already satisfied, skipping upgrade: cython>=0.27.3 in /home/carl/.local/lib/python3.8/site-packages (from pycocotools==2.0) (0.29.26)\n",
-      "Requirement already satisfied, skipping upgrade: matplotlib>=2.1.0 in /home/carl/.local/lib/python3.8/site-packages (from pycocotools==2.0) (3.5.0)\n",
-      "Requirement already satisfied, skipping upgrade: setuptools>=18.0 in /usr/lib/python3/dist-packages (from pycocotools==2.0) (45.2.0)\n",
-      "Requirement already satisfied, skipping upgrade: pyparsing>=2.2.1 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (3.0.6)\n",
-      "Requirement already satisfied, skipping upgrade: cycler>=0.10 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (0.11.0)\n",
-      "Requirement already satisfied, skipping upgrade: pillow>=6.2.0 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (8.4.0)\n",
-      "Requirement already satisfied, skipping upgrade: python-dateutil>=2.7 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (2.8.2)\n",
-      "Requirement already satisfied, skipping upgrade: packaging>=20.0 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (21.3)\n",
-      "Requirement already satisfied, skipping upgrade: setuptools-scm>=4 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (6.3.2)\n",
-      "Requirement already satisfied, skipping upgrade: kiwisolver>=1.0.1 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (1.3.2)\n",
-      "Requirement already satisfied, skipping upgrade: numpy>=1.17 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (1.21.4)\n",
-      "Requirement already satisfied, skipping upgrade: fonttools>=4.22.0 in /home/carl/.local/lib/python3.8/site-packages (from matplotlib>=2.1.0->pycocotools==2.0) (4.28.3)\n",
-      "Requirement already satisfied, skipping upgrade: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib>=2.1.0->pycocotools==2.0) (1.14.0)\n",
-      "Requirement already satisfied, skipping upgrade: tomli>=1.0.0 in /home/carl/.local/lib/python3.8/site-packages (from setuptools-scm>=4->matplotlib>=2.1.0->pycocotools==2.0) (1.2.2)\n",
-      "Building wheels for collected packages: pycocotools\n",
-      "  Building wheel for pycocotools (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pycocotools: filename=pycocotools-2.0-cp38-cp38-linux_x86_64.whl size=419087 sha256=d4cda01684e70992bee8b7cb9107d56c7bacc6f6430220c3edfa79417fddc46b\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-dbcqybup/wheels/bf/78/f1/9a856d069f2c6b383df93dcbb04cff9aca00ac2beeefbded5b\n",
-      "Successfully built pycocotools\n",
-      "Installing collected packages: pycocotools\n",
-      "Successfully installed pycocotools-2.0\n"
+      "--2022-01-02 01:06:19--  http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
+      "Resolving images.cocodataset.org (images.cocodataset.org)... 52.217.169.57\n",
+      "Connecting to images.cocodataset.org (images.cocodataset.org)|52.217.169.57|:80... connected.\n",
+      "HTTP request sent, awaiting response... 416 Requested Range Not Satisfiable\n",
+      "\n",
+      "    The file is already fully retrieved; nothing to do.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "!pip install -U 'git+https://github.com/leimao/cocoapi.git#subdirectory=PythonAPI'"
+    "!wget -c http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r annotations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-01-02 01:11:36--  http://images.cocodataset.org/annotations/stuff_annotations_trainval2017.zip\n",
+      "Resolving images.cocodataset.org (images.cocodataset.org)... 54.231.195.161\n",
+      "Connecting to images.cocodataset.org (images.cocodataset.org)|54.231.195.161|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1148688564 (1.1G) [application/zip]\n",
+      "Saving to: ‘stuff_annotations_trainval2017.zip’\n",
+      "\n",
+      "stuff_annotations_t 100%[===================>]   1.07G  92.3MB/s    in 12s     \n",
+      "\n",
+      "2022-01-02 01:11:48 (93.7 MB/s) - ‘stuff_annotations_trainval2017.zip’ saved [1148688564/1148688564]\n",
+      "\n",
+      "Archive:  stuff_annotations_trainval2017.zip\n",
+      " extracting: annotations/stuff_train2017_pixelmaps.zip  \n",
+      " extracting: annotations/stuff_val2017_pixelmaps.zip  \n",
+      "  inflating: annotations/stuff_val2017.json  \n",
+      "  inflating: annotations/stuff_train2017.json  \n",
+      "   creating: annotations/deprecated-challenge2017/\n",
+      "  inflating: annotations/deprecated-challenge2017/val-ids.txt  \n",
+      "  inflating: annotations/deprecated-challenge2017/train-ids.txt  \n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -c http://images.cocodataset.org/annotations/stuff_annotations_trainval2017.zip\n",
+    "!unzip stuff_annotations_trainval2017.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
