functional image blending

--- a/botr_setup.ipynb
+++ b/botr_setup.ipynb
@@ -15290,6 +15290,45 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Full Training Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n",
+      "[dataset/train2017.zip]\n",
+      "  End-of-central-directory signature not found.  Either this file is not\n",
+      "  a zipfile, or it constitutes one disk of a multi-part archive.  In the\n",
+      "  latter case the central directory and zipfile comment will be found on\n",
+      "  the last disk(s) of this archive.\n",
+      "unzip:  cannot find zipfile directory in one of dataset/train2017.zip or\n",
+      "        dataset/train2017.zip.zip, and cannot find dataset/train2017.zip.ZIP, period.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget http://images.cocodataset.org/zips/train2017.zip -o dataset/train2017.zip\n",
+    "!unzip -q dataset/train2017.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
