--- a/process_metaplex.ipynb
+++ b/process_metaplex.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'address': '3JHzNr2MCWa8Niekwcn8Ymw4HYdbA7xHKfGEASarkFjM', 'share': 100}]\n"
+      "[{'address': '6TNtaPn8MEaBvekb7PzFnPTm6aTHdvFmSBoRznjETjXK', 'share': 100}]\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,28 +54,14 @@
      "output_type": "stream",
      "text": [
       "copied generated/0.png to assets/0.png\n",
-      "copied generated/1.png to assets/1.png\n",
-      "copied generated/2.png to assets/2.png\n",
-      "copied generated/3.png to assets/3.png\n",
-      "copied generated/4.png to assets/4.png\n",
-      "copied generated/5.png to assets/5.png\n",
-      "copied generated/6.png to assets/6.png\n",
-      "copied generated/7.png to assets/7.png\n",
-      "copied generated/8.png to assets/8.png\n",
-      "copied generated/9.png to assets/9.png\n",
-      "copied generated/10.png to assets/10.png\n",
-      "copied generated/11.png to assets/11.png\n",
-      "copied generated/12.png to assets/12.png\n",
-      "copied generated/13.png to assets/13.png\n",
-      "copied generated/14.png to assets/14.png\n",
-      "copied generated/15.png to assets/15.png\n"
+      "copied generated/1.png to assets/1.png\n"
      ]
     }
    ],
    "source": [
     "# save nfts with proper metadata\n",
     "path = \"generated/\"\n",
-    "symbol = \"BOTR\"\n",
+    "symbol = \"BOTRDEV\"\n",
     "collection_name = \"Back of the Router\"\n",
     "description = \"Confusing images\"\n",
     "category = \"image\"\n",
@@ -88,15 +74,20 @@
     "\n",
     "nft_imgs = natsort.natsorted(nft_imgs)\n",
     "nft_attrs = natsort.natsorted(nft_attrs)\n",
+    "index = 0\n",
     "\n",
     "for img, attr in zip(nft_imgs, nft_attrs):\n",
     "    # dict_attrs = json.loads(attr)\n",
     "    name = os.path.splitext(os.path.split(img)[-1])[0]\n",
+    "\n",
     "    with open(attr) as f:\n",
     "        dict_attrs = json.loads(f.read())\n",
+    "\n",
+    "    # name = dict_attrs.pop(\"name\")\n",
+    "    name = dict_attrs[\"name\"]\n",
     "    attr_format = format_attributes([dict_attrs])\n",
     "    metadata = generate_metadata(\n",
-    "        name=f\"{collection_name} {name}\",\n",
+    "        name=f\"{name}\",\n",
     "        symbol=symbol,\n",
     "        royalties=royalties,\n",
     "        collection_name=collection_name,\n",
@@ -110,10 +101,27 @@
     "        collection_family=collection_family,\n",
     "        seller_fee_basis_points=seller_fee_basis_points\n",
     "    )\n",
-    "    \n",
+    "    index += 1\n",
     "    # save it in the output assets dir\n",
     "    save_json(os.path.join(assets_folder, os.path.split(attr)[-1]), metadata)\n",
     "    copy_file(img, assets_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: ts-node: command not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ./js/packages/cli/src/candy-machine-cli.ts upload ~/back-of-the-router/assets/ --env devnet --keypair ~/.config/solana/devnet.js"
    ]
   },
   {
