restructuring image generation

--- a/generator_ideas.ipynb
+++ b/generator_ideas.ipynb
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1068,15 +1068,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30576 images exist that fit license criteria\n"
+     ]
+    }
+   ],
    "source": [
     "# filter out licenses that can't be used\n",
     "allowed_licenses = [4, 5, 7]\n",
     "allowed_images = dict(filter(lambda elem: elem[1]['license_id'] in allowed_licenses, coco_images.items()))\n",
     "print(f'{len(allowed_images.keys())} images exist that fit license criteria')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
