--- a/organize_coco_interactive.ipynb
+++ b/organize_coco_interactive.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import load_coco_info, load_coco_image\n",
+    "from coco_utils import load_coco_info, load_coco_image\n",
     "import numpy as np\n",
     "from pycocotools.coco import COCO\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=29.32s)\n",
+      "Done (t=21.88s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=27.13s)\n",
+      "Done (t=43.34s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -183,18 +183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "category_map = {}\n",
     "\n",
-    "license_breakdown = {name: 0 for name in [l[\"name\"] for l in coco_captions['licenses']]}\n",
+    "for cat in coco_stuff.dataset['categories']:\n",
+    "  category_map[cat['id']] = cat\n",
     "\n",
-    "for img in coco_images.values():\n",
-    "  license_breakdown[img['license_name']] += 1\n",
-    "\n",
-    "fig = px.pie(values=list(license_breakdown.values()), names=list(license_breakdown.keys()), title='License Breakdown')\n",
-    "fig.show()"
+    "for cat in coco_instances.dataset['categories']:\n",
+    "  category_map[cat['id']] = cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('dataset/category_map.pickle', 'wb') as handle:\n",
+    "    pickle.dump(category_map, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   }
  ],
