--- a/organize_coco_interactive.ipynb
+++ b/organize_coco_interactive.ipynb
@@ -205,6 +205,18 @@
     "with open('dataset/category_map.pickle', 'wb') as handle:\n",
     "    pickle.dump(category_map, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(botr.coco_examples.keys()))\n",
+    "filtered_dataset = filter_sorted_coco(botr.coco_examples, key='license_id', allowed=[2,5,7])\n",
+    "print(len(filtered_dataset.keys()))\n",
+    "save_dict(filtered_dataset, \"dataset/coco_organized.pickle\")"
+   ]
   }
  ],
  "metadata": {
