adding dataset downloading utility

--- a/botr.ipynb
+++ b/botr.ipynb
@@ -145,26 +145,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YPPP\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'dict' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4181705/3914572122.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'out/9.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_4181705/1057242618.py\u001b[0m in \u001b[0;36mgenerate_name\u001b[0;34m(metadata)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"YPPP\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mword_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0msorted_attrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mattr_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'dict' and 'str'"
+      "{\n",
+      "  \"plant\": 0.2799873352050781,\n",
+      "  \"vehicle\": 0.23099517822265625,\n",
+      "  \"raw-material\": 0.1172943115234375,\n",
+      "  \"textile\": 0.06676101684570312,\n",
+      "  \"sports\": 0.055816650390625,\n",
+      "  \"wall\": 0.048976898193359375,\n",
+      "  \"electronic\": 0.0459442138671875,\n",
+      "  \"food-stuff\": 0.028446197509765625,\n",
+      "  \"solid\": 0.02082061767578125,\n",
+      "  \"animal\": 0.018463134765625,\n",
+      "  \"outdoor\": 0.014148712158203125,\n",
+      "  \"furniture-stuff\": 0.01345062255859375,\n",
+      "  \"indoor\": 0.013248443603515625,\n",
+      "  \"window\": 0.011653900146484375,\n",
+      "  \"furniture\": 0.0085906982421875,\n",
+      "  \"sky\": 0.007480621337890625,\n",
+      "  \"accessory\": 0.00540924072265625,\n",
+      "  \"kitchen\": 0.003734588623046875,\n",
+      "  \"food\": 0.002246856689453125,\n",
+      "  \"building\": 0,\n",
+      "  \"structural\": 0,\n",
+      "  \"floor\": 0,\n",
+      "  \"ceiling\": 0,\n",
+      "  \"ground\": 0,\n",
+      "  \"water\": 0,\n",
+      "  \"other\": 0,\n",
+      "  \"person\": 0,\n",
+      "  \"appliance\": 0\n",
+      "}\n"
      ]
     }
    ],
@@ -172,7 +189,7 @@
     "metadata = load_json('out/9.json')\n",
     "\n",
     "sorted_attrs = sort_dict(metadata[\"category_percentage\"])\n",
-    "\n",
+    "print_pretty(sorted_attrs)\n",
     "# name = generate_name(metadata)"
    ]
   },
