cleanup, threading, stats

--- a/testing-objects.ipynb
+++ b/testing-objects.ipynb
@@ -288,7 +288,7 @@
     "    if get_annotation_supercategory(ann) in exclude:\n",
     "        continue\n",
     "    if abs(area - areaTarget) < tolerance:\n",
-    "        botrGen.append_layer(BOTR_Layer(botrGen, example, ann))\n",
+    "        botrGen.append_layer(BOTR_Layer(example, ann))\n",
     "\n",
     "\n",
     "botrGen.generate(config)\n",
